env renames and comment fixes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
   />
   <link rel="shortcut icon" href="/favicon.ico" />
-  <!-- <script src="/env-config.js"></script> -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#06c" />
   <meta name="robots" content="noindex, nofollow" />
@@ -51,7 +50,7 @@
 </body>
 <!-- Discord widget -->
 <script type="text/javascript">
-  // if (!window._env_.HIDE_DISCORD) {
+  // if (!window._env_.VITE_HIDE_DISCORD) {
   //   document.write('<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>const crate = new Crate({server: "769482988882493450",channel: "769508553118842881", location: ["bottom", "left"], color: "#023263"});crate.notify({content: "Need help?",timeout: 8000,avatar: "https://i.postimg.cc/MK5M3H87/1516624713231.jpg"});<\/script>');
   // }
 </script>
