env-config test

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
   />
   <link rel="shortcut icon" href="/favicon.ico" />
-  <script src="/env-config.js"></script>
+  <script src="/dashboard/env-config.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#06c" />
   <meta name="robots" content="noindex, nofollow" />
