--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </body>
 <!-- Discord widget -->
 <script type="text/javascript">
-  if (!window._env_.VITE_HIDE_DISCORD) {
+  if (!window._env_.HIDE_DISCORD) {
     document.write('<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>const crate = new Crate({server: "769482988882493450",channel: "769508553118842881", location: ["bottom", "left"], color: "#023263"});crate.notify({content: "Need help?",timeout: 8000,avatar: "https://i.postimg.cc/MK5M3H87/1516624713231.jpg"});<\/script>');
   }
 </script>
