format + Server url change

--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root">
-            <div style="height: 100vh; display: flex; justify-content: center; align-items: center; background-color: #fff;">
+            <div
+                style="
+                    height: 100vh;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #fff;
+                "
+            >
                 <svg width="80" height="80" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <style>
                         .svg__loader_group-top {
