--- a/index.html
+++ b/index.html
@@ -189,5 +189,6 @@
     <script>
         let title_el = document.querySelector('title')
         if (window.location.origin === 'https://preview.devtron.ai') title_el.innerHTML = 'Devtron Sandbox'
+        if (window._env_.ORGANIZATION_NAME) title_el.innerHTML = window._env_.ORGANIZATION_NAME
     </script>
 </html>
