feat: change body background

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <title>Devtron</title>
     </head>
 
-    <body>
+    <body style="background-color: #131315;">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root">
             <div
@@ -50,7 +50,7 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    background-color: #fff;
+                    background-color: #131315;
                 "
             >
                 <svg width="80" height="80" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
